fix vertical align

--- a/source/elements/subscribe_article_item/_style.scss
+++ b/source/elements/subscribe_article_item/_style.scss
@@ -3,5 +3,6 @@
     svg {
         max-width: .8em;
         max-height: .8em;
+        vertical-align: middle;
     }
 }
